# warc-parquet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  reader.rs  record_columns.rs  schema.rs
