[package]
name = "warc-parquet"
version = "0.6.1"
edition = "2021"
description = "A utility for converting WARC to Parquet."
license = "MIT"
keywords = ["warc", "parquet", "arrow"]
repository = "https://github.com/maxcountryman/warc-parquet"

[dependencies]
arrow = "47.0.0"
lazy_static = "1.4.0"
libflate = "2.1.0"
parquet = "47.0.0"
time = { version = "0.3.36", features = ["parsing"] }
warc = "0.3.2"

[dependencies.clap]
version = "4.5.15"
features = ["derive"]

[dev-dependencies]
tempfile = "3.10.1"
